--- a/ckan/public/base/less/ckan.less
+++ b/ckan/public/base/less/ckan.less
@@ -26,7 +26,10 @@
 body {
   // Using the masthead/footer gradient prevents the color from changing
   // at the bottom of the window on pages with little content.
-  background: @mastheadBackgroundColor url("@{bgPath}");
+  //background: @mastheadBackgroundColor url("@{bgPath}");
+  font-family: 'Open Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 [hidden] {
