--- a/ckan/public/base/less/dashboard.less
+++ b/ckan/public/base/less/dashboard.less
@@ -94,7 +94,7 @@
         margin: 0;
         .border-radius(0);
         i {
-          background-color: @layoutLinkColor;
+          //background-color: @layoutLinkColor;
           color: @inputBackground;
           margin-right: 11px;
           padding: 3px 5px;
@@ -107,7 +107,7 @@
         }
       }
       &.active a i {
-        color: @layoutLinkColor;
+        //color: @layoutLinkColor;
         background-color: @inputBackground;
       }
     }
