--- a/ckan/public/base/less/footer.less
+++ b/ckan/public/base/less/footer.less
@@ -1,6 +1,7 @@
 .site-footer {
-  .masthead();
-  padding: 20px 0;
+  //.masthead();
+  background-color: #464646;
+  padding: 20px;
 }
 
 .site-footer,
