--- a/ckan/public/base/less/homepage.less
+++ b/ckan/public/base/less/homepage.less
@@ -7,7 +7,7 @@
   .module-search {
     padding: 5px;
     margin: 20px 0 0 0;
-    color: @mastheadTextColor;
+    color: #464646;
     background: @layoutTrimBackgroundColor;
     .search-giant {
       margin-bottom: 10px;
@@ -17,7 +17,7 @@
     }
     .module-content {
       .border-radius(3px 3px 0 0);
-      background-color: @mastheadBackgroundColor;
+      //background-color: @mastheadBackgroundColor;
       border-bottom: none;
       .heading {
         margin-top: 0;
@@ -29,7 +29,7 @@
     .tags {
       .clearfix();
       padding: 5px 10px 10px 10px;
-      background-color: darken(@mastheadBackgroundColor, 10%);
+      //background-color: darken(@mastheadBackgroundColor, 10%);
       .border-radius(0 0 3px 3px);
       h3,
       .tag {
