--- a/ckan/public/base/less/layout.less
+++ b/ckan/public/base/less/layout.less
@@ -1,16 +1,16 @@
 .wrapper {
   .clearfix();
-  .box();
+  //.box();
   position: relative;
-  background-color:#fff;
+  //background-color:#fff;
   margin-bottom: 20px;
   margin-left:0;
 }
 @media (min-width: 768px) {
   .wrapper {
-    background-image:url("@{imagePath}/nav.png");
-    background-repeat:repeat-y;
-    background-position:-54px 0px;
+    //background-image:url("@{imagePath}/nav.png");
+    //background-repeat:repeat-y;
+    //background-position:-54px 0px;
   }
 }
 @media (min-width: 980px) {
@@ -26,11 +26,12 @@
 [role=main], .main {
   position: relative;
   padding-bottom: 20px;
+  background-color: #fff;
 }
 @media (min-width: 768px) {
   [role=main], .main {
-    padding-top: 10px;
-    background: @layoutBackgroundColor url("@{bgPath}");
+    padding-top: 40px;
+    //background: @layoutBackgroundColor url("@{bgPath}");
   }
 }
 
@@ -66,7 +67,7 @@
 }
 @media (max-width: 768px) {
   .wrapper {
-    margin: 0 -20px;
+    //margin: 0 -20px;
     border-width: 0;
     .box-shadow(0);
     .border-radius(0);
@@ -139,7 +140,8 @@
 
 @media (min-width: 768px) {
   .hero {
-    background: url("@{imagePath}/background-tile.png");
+    background: url("@{imagePath}/databg.jpg") top center no-repeat;
+    /*background from http://www.freepik.com*/
   }
 }
 
@@ -183,7 +185,7 @@
   }
   h1.heading {
     margin: 0 0 5px 0;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 1.3;
     .break-word();
   }
