--- a/ckan/public/base/less/main.less
+++ b/ckan/public/base/less/main.less
@@ -58,3 +58,9 @@
 
 // CKAN
 @import "ckan.less";
+
+//Fonts
+@import url(http://fonts.googleapis.com/css?family=Pacifico|Kaushan+Script);
+@import url(http://fonts.googleapis.com/css?family=Poiret+One);
+@import url(http://fonts.googleapis.com/css?family=Reenie+Beanie);
+@import url(http://fonts.googleapis.com/css?family=Paytone+One);
