--- a/ckan/public/base/less/module.less
+++ b/ckan/public/base/less/module.less
@@ -1,5 +1,6 @@
 .module {
-  margin: 20px 0;
+  margin: 1em 0;
+  padding:1em;
 }
 
 .module-heading {
@@ -8,13 +9,14 @@
   padding: 7px @gutterX;
   font-size: 14px;
   line-height: 1.3;
-  background-color: @moduleHeadingBackgroundColor;
-  border-top: 1px solid @moduleHeadingBorderColor;
-  border-bottom: 1px solid @moduleHeadingBorderColor;
+  background-color: #54AAAA;
+  color:#fff;
+  //border-top: 1px solid @moduleHeadingBorderColor;
+  //border-bottom: 1px solid @moduleHeadingBorderColor;
 }
 
 .module-content {
-  padding: 0 @gutterX;
+  padding:25px;
   margin: 20px 0;
 }
 @media (min-width: 768px) {
@@ -25,7 +27,7 @@
 
 .module-content:first-child {
   margin-top: 0;
-  padding-top: @gutterY;
+  //padding-top: @gutterY;
 }
 
 .module-content:last-child {
