--- a/ckan/public/base/less/toolbar.less
+++ b/ckan/public/base/less/toolbar.less
@@ -89,8 +89,8 @@
 
 .page-header {
   .clearfix;
-  border-bottom: 1px solid @moduleHeadingBorderColor;
-  background-color: @moduleHeadingBackgroundColor;
+  //border-bottom: 1px solid @moduleHeadingBorderColor;
+  //background-color: @moduleHeadingBackgroundColor;
   .border-radius(0 3px 0 0);
   .nav-tabs {
     float: left;
@@ -102,7 +102,7 @@
   }
   .content_action {
     float: right;
-    margin-top: -5px;
+    margin-top: 0;
     margin-right: -7px;
   }
 }
